--- a/WebSocket/UI/index.html
+++ b/WebSocket/UI/index.html
@@ -85,7 +85,7 @@
             const email = prompt("Enter your email:");
             const password = prompt("Enter your password:");
 
-            const response = await fetch("https://atlas-six-drab.vercel.app/api/user/login", {
+            const response = await fetch("https://webchat-r2mm.onrender.com/api/user/login", {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({ email, password })
@@ -103,7 +103,7 @@
         async function connectSocket() {
             try {
                 const token = await authenticateUser();
-                socket = io("https://atlas-six-drab.vercel.app/", { transports: ["polling"] ,auth: { token } });
+                socket = io("https://webchat-r2mm.onrender.com", { auth: { token } });
                 socket.on("connect", () => console.log("Connected as:", socket.id));
                 setupSocketListeners();
             } catch (error) {
